--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ hs_err_pid*
 app/build/intermediates/**
 app/build/outputs/logs/manifest-merger-debug-report.txt
 local.properties
+local.properties
