--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 24 10:46:45 NZST 2021
-sdk.dir=C\:\\Users\\Henry\\AppData\\Local\\Android\\Sdk
+#Tue Jun 01 15:07:37 NZST 2021
+sdk.dir=C\:\\Users\\Nick\\AppData\\Local\\Android\\Sdk
